--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,2 +1,5 @@
-<h2>Ошибка при запросе!</h2>
-{{error}}
+<h1>{{message}}</h1>
+<h2>{{error.status}}</h2>
+<pre>{{error.stack}}</pre>
+
+<a class="pipe-separate t-light-green left" href="/"><h2>Вернуться на главную</h2></a>
