--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,1 +1,34 @@
-<h2>Шапка сайта</h2>
+{{!-- <h2>Шапка сайта</h2> --}}
+
+<header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Главная</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        {{#if userId}}
+        <li class="nav-item">
+          <a class="nav-link" href="/user/logout">Выход</a>
+        </li>
+        {{!-- <li class="nav-item">
+          <a class="nav-link" href="/books/new">Добавить книгу</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/books/">Мои книги</a>
+        </li> --}}
+        {{else}}
+        <li class="nav-item">
+          <a class="nav-link" href="/user/register">Зарегистрироваться</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/user/login">Войти</a>
+        </li>
+        {{/if}}
+      </ul>
+    </div>
+  </div>
+</nav>
+</header>
