--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,9 +3,9 @@
 <h1>Главная страница</h1>
 
 <form id="formSearch">
-<input class="form-control" name="phrase" type="text" placeholder="Search phrase" aria-label="default input example" required>
+<input class="form-control" name="query" type="text" placeholder="Search phrase" aria-label="default input example" required>
 <br>
-<input class="form-control" name="number" type="text" placeholder="Number of results (5 default)" aria-label="default input example">
+<input class="form-control" name="amount" type="text" placeholder="Number of results (default - 5, max - 50)" aria-label="default input example">
 <br>
 <label>Select order to</label>
 <select required name="order" class="form-select" aria-label="Default select example">
