complete deleting card

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <script defer src="/js/search.js"></script>
-<script defer src="/js/save_statistic.js"></script>
+<script defer src="/js/deleteCard.js"></script>
 <h1>Главная страница</h1>
 
 <form id="formSearch">
