--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,6 +19,6 @@
 </form>
 <br>
 <br>
-<button type="submit" id="btnSaveResults" class="btn btn-info">Save statistics</button>
+{{!-- <button type="submit" id="btnSaveResults" class="btn btn-info">Save statistics</button> --}}
 
 <div id="ytStat" class="my-4 row"></div>
