--- a/views/videoSearch.hbs
+++ b/views/videoSearch.hbs
@@ -1,6 +1,6 @@
-<script defer src="/js/search.js"></script>
-<script defer src="/js/deleteCard.js"></script>
-<h1>Главная страница</h1>
+<script defer src="/js/videoSearch.js"></script>
+<script defer src="/js/deleteVideo.js"></script>
+<h1>Video Search</h1>
 
 <form id="formSearch">
 <input class="form-control" name="query" type="text" placeholder="Search phrase" aria-label="default input example" required>
@@ -19,6 +19,4 @@
 </form>
 <br>
 <br>
-{{!-- <button type="submit" id="btnSaveResults" class="btn btn-info">Save statistics</button> --}}
-
 <div id="ytStat" class="my-4 row"></div>
