--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -11,14 +11,17 @@
       <ul class="navbar-nav">
         {{#if userId}}
         <li class="nav-item">
-          <a class="nav-link" href="/user/logout">Logout</a>
+          <a class="nav-link" href="/videos">Videos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/books/new">My searches</a>
+          <a class="nav-link" href="/channels">Channels</a>
         </li>
-        {{!-- <li class="nav-item">
-          <a class="nav-link" href="/books/">Мои книги</a>
-        </li> --}}
+        <li class="nav-item">
+          <a class="nav-link" href="/history">History</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/user/logout">Logout</a>
+        </li>
         {{else}}
         <li class="nav-item">
           <a class="nav-link" href="/user/register">Registration</a>
