--- a/views/channelSearch.hbs
+++ b/views/channelSearch.hbs
@@ -1,5 +1,5 @@
 <script defer src="/js/channelSearch.js"></script>
-{{!-- <script defer src="/js/deleteVideo.js"></script> --}}
+<script defer src="/js/deleteChannel.js"></script>
 <h1>Channel Search</h1>
 
 <form id="formSearch">
