--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,9 +16,21 @@
   </div>
 </div>
 </div>
-{{else}}
-<h1>YT Screener greetings</h1>
- {{/if}}
+
 <div id="video-tutorial">
   <iframe width="780" height="439" src="https://www.youtube.com/embed/AFca2KkxBH0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+{{else}}
+<h1>YT Screener greetings</h1>
+
+<div id="video-tutorial">
+  <iframe width="780" height="439" src="https://www.youtube.com/embed/AFca2KkxBH0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<a href="/user/login" type="button" class="btn btn-primary btn-lg">login</a>
+<br>
+<br>
+OR <a href="/user/register">Registered</a>
+
+ {{/if}}
+
