--- a/views/channelSearch.hbs
+++ b/views/channelSearch.hbs
@@ -6,7 +6,7 @@
 <form id="formSearch">
 <input class="input form-control mx-auto mt-5" name="query" type="text" placeholder="Search phrase" aria-label="default input example" required>
 <br>
-<input class="input form-control mx-auto" name="amount" type="text" placeholder="Number of results (default - 5, max - 50)" aria-label="default input example">
+<input class="input form-control mx-auto" name="amount" type="text" placeholder="Total of results (default - 5, max - 50)" aria-label="default input example">
 <br>
 <label>Select order to</label>
 <select required name="order" class="input form-select mx-auto" aria-label="Default select example">
