--- a/views/error.hbs
+++ b/views/error.hbs
@@ -2,4 +2,4 @@
 <h2>{{error.status}}</h2>
 <pre>{{error.stack}}</pre>
 
-<a class="pipe-separate t-light-green left" href="/"><h2>Вернуться на главную</h2></a>
+<a class="pipe-separate t-light-green left" href="/"><h2>Go back to main page</h2></a>
